--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   image_picker: ^1.0.7
   cloud_firestore: ^4.14.0
   flutter_plugin_android_lifecycle: ^2.0.17
+  rflutter_alert: ^2.0.7
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
