--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_plugin_android_lifecycle: ^2.0.17
   rflutter_alert: ^2.0.7
   intl: ^0.19.0
+  firebase_messaging: ^14.7.10
+  firebase_analytics: ^10.8.0
 
 dev_dependencies:
   flutter_test:
